--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>nimbus-jose-jwt</artifactId>
 			<version>9.34</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
