--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+  liquibase:
+    change-log: classpath:db/changelog/master.xml
 jws:
   sharedKey: wsc7e4lk-a23a-4vdb-brgc-33d4g0c58261
