--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 			<artifactId>java-jwt</artifactId>
 			<version>4.4.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>6.2.1</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 
