--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,10 +2,13 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/stockman
     username: root
-    password: root
+    password: rootpass
   liquibase:
     contexts: prod
     change-log: classpath:db/changelog/master.xml
+  jpa:
+    hibernate:
+      ddl-auto: validate
 
 jws:
   sharedKey: wsc7e4lk-a23a-4vdb-brgc-33d4g0c58261
